# iiot

./: Cargo.toml  README.md  log.txt  wokwi.toml
.cargo/: config.toml
esp32/: log.txt
esp32/.devcontainer/: devcontainer.json
esp32/src/: dht11.rs  main.rs  ui.rs
server/: Cargo.toml
server/migrations/: 0001_initial.up.sql
server/src/: main.rs
src/: dht11.rs  main.rs  mqtt.rs
