[package]
name = "iiot-webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
rumqttc = "0.24.0"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio", "chrono"] }
lettre = { version = "0.11.15", features = ["tokio1", "tokio1-native-tls", "builder"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["time", "macros", "rt-multi-thread"] }
once_cell = "1.21.3"